force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MemoryType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MemoryType__c</fullName>
    <label>Memory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>DRAM</fullName>
            </value>
            <value>
                <fullName>Synchronous DRAM</fullName>
            </value>
            <value>
                <fullName>Cache DRAM</fullName>
            </value>
            <value>
                <fullName>EDO</fullName>
            </value>
            <value>
                <fullName>EDRAM</fullName>
            </value>
            <value>
                <fullName>VRAM</fullName>
            </value>
            <value>
                <fullName>SRAM</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>Flash</fullName>
            </value>
            <value>
                <fullName>EEPROM</fullName>
            </value>
            <value>
                <fullName>FEPROM</fullName>
            </value>
            <value>
                <fullName>EPROM</fullName>
            </value>
            <value>
                <fullName>CDRAM</fullName>
            </value>
            <value>
                <fullName>3DRAM</fullName>
            </value>
            <value>
                <fullName>SDRAM</fullName>
            </value>
            <value>
                <fullName>SGRAM</fullName>
            </value>
            <value>
                <fullName>RDRAM</fullName>
            </value>
            <value>
                <fullName>DDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>