force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>