force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Min_Consumable_Resource__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Min_Consumable_Resource__c</fullName>
    <label>Minimum Consumable Resource</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>