force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MinBlockSize__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MinBlockSize__c</fullName>
    <label>Minimum Block Size</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>