force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>