force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Model__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Model__c</fullName>
    <inlineHelpText>Use this field to enter the name by which the entity represented by the instance is generally known. For example, the model name of an Acme widget might be Pro Widget 2000.</inlineHelpText>
    <label>Model</label>
    <length>254</length>
    <type>Text</type>
</CustomField>