force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Name__c</fullName>
    <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the instance.</inlineHelpText>
    <label>Instance Name</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>