force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__NetworkID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NetworkID__c</fullName>
    <label>Network ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>