force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Node_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Node_Descriptor__c</fullName>
    <label>Node Descriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>