force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Notes__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Notes__c</fullName>
    <inlineHelpText>Use this field to enter general notes about the instance.</inlineHelpText>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>