force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Number_of_Blocks__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Number_of_Blocks__c</fullName>
    <label>Number of Blocks</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>