force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Number_of_Power_Cords__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Number_of_Power_Cords__c</fullName>
    <label>Number of Power Cords</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>