force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__NumberChannels__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NumberChannels__c</fullName>
    <label>Number Of Channels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>