force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__NumberOfLPARS__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NumberOfLPARS__c</fullName>
    <label>Number Of LPARS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>