force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__NumberOfSlots__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NumberOfSlots__c</fullName>
    <label>Number Of Slots</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>