force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__OSLanguage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OSLanguage__c</fullName>
    <label>OS Language</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>