force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__OtherTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OtherTypeDescription__c</fullName>
    <label>Other Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>