force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Owner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Owner__c</fullName>
    <formula>BMCServiceDesk__Service_Owner__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>