force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__OwnerName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OwnerName__c</fullName>
    <label>OwnerName</label>
    <length>254</length>
    <type>Text</type>
</CustomField>