force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PagerParams2__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PagerParams2__c</fullName>
    <label>Pager Parameters 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>