force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PagerSoftware__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PagerSoftware__c</fullName>
    <label>Pager Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>