force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PaperSizesSupported__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PaperSizesSupported__c</fullName>
    <label>Paper Sizes Supported</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>