force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ParentCITag__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ParentCITag__c</fullName>
    <label>ParentCITag</label>
    <length>254</length>
    <type>Text</type>
</CustomField>