force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Partitions__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Partitions__c</fullName>
    <label>Partitions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>