force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PatchNumber__c</fullName>
    <label>Patch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>