force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PersonAdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PersonAdditionalDetails__c</fullName>
    <label>Person Additional Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>