force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PersonId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PersonId__c</fullName>
    <label>Person ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>