force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>