force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PhysicalPosition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PhysicalPosition__c</fullName>
    <label>Physical Position</label>
    <length>30</length>
    <type>Text</type>
</CustomField>