force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Pixels_Per_X_Logical_Inch__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Pixels_Per_X_Logical_Inch__c</fullName>
    <label>Pixels Per X Logical Inch</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>