force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PNPDeviceID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PNPDeviceID__c</fullName>
    <label>PNP Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>