force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Pointing_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Pointing_Type__c</fullName>
    <label>Pointing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Track Ball</fullName>
            </value>
            <value>
                <fullName>Track Point</fullName>
            </value>
            <value>
                <fullName>Glide Point</fullName>
            </value>
            <value>
                <fullName>Touch Pad</fullName>
            </value>
            <value>
                <fullName>Touch Screen</fullName>
            </value>
            <value>
                <fullName>Mouse - Optical Sensor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>