force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Port_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Port_Type__c</fullName>
    <label>Port Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>FDDI</fullName>
            </value>
            <value>
                <fullName>Token Ring</fullName>
            </value>
            <value>
                <fullName>WAN</fullName>
            </value>
            <value>
                <fullName>Fibre Channel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>