force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PortNumber__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PortNumber__c</fullName>
    <label>Port Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>