force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PortsPerSlot__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PortsPerSlot__c</fullName>
    <label>Ports Per Slot</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>