force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PowerManagementCapabilities__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PowerManagementCapabilities__c</fullName>
    <label>Power Management Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Not Supported</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Power Saving Modes Entered Automatically</fullName>
            </value>
            <value>
                <fullName>Power State Settable</fullName>
            </value>
            <value>
                <fullName>Power Cycling Supported</fullName>
            </value>
            <value>
                <fullName>Timed Power On Supported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>