force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PrefixLength__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrefixLength__c</fullName>
    <label>Prefix Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>