force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PrimaryCapability__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrimaryCapability__c</fullName>
    <label>Primary Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access point</fullName>
            </value>
            <value>
                <fullName>Access Server</fullName>
            </value>
            <value>
                <fullName>Blade Server</fullName>
            </value>
            <value>
                <fullName>Blade System</fullName>
            </value>
            <value>
                <fullName>Block Server</fullName>
            </value>
            <value>
                <fullName>Bridge/Extender</fullName>
            </value>
            <value>
                <fullName>Central Office Switch</fullName>
            </value>
            <value>
                <fullName>Chassis Manager</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>ExtenderNode</fullName>
            </value>
            <value>
                <fullName>File Server</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Host-based RAID controller</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>I/O</fullName>
            </value>
            <value>
                <fullName>IP Phone</fullName>
            </value>
            <value>
                <fullName>JBOD</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Layer 3 Proxy Server</fullName>
            </value>
            <value>
                <fullName>Layer 3 Switch</fullName>
            </value>
            <value>
                <fullName>LoadBalancer</fullName>
            </value>
            <value>
                <fullName>Mainframe</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Management Controller</fullName>
            </value>
            <value>
                <fullName>Media Library</fullName>
            </value>
            <value>
                <fullName>Mobile User Device</fullName>
            </value>
            <value>
                <fullName>NAS Head</fullName>
            </value>
            <value>
                <fullName>Not Dedicated</fullName>
                <default>true</default>
                <label>Not Dedicated</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>