force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PrimaryClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrimaryClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Client</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Base_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>