force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Priority__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Priority__c</fullName>
    <description>Link this to Priority module</description>
    <inlineHelpText>From the list of options, select the priority of the instance. The priority of the instance indicates the importance of the instance in the CMDB.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>