force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ProcessorArchitecture__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProcessorArchitecture__c</fullName>
    <label>Processor Architecture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>ia64</fullName>
            </value>
            <value>
                <fullName>MIPS</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>PA-RISC</fullName>
            </value>
            <value>
                <fullName>PowerPC</fullName>
            </value>
            <value>
                <fullName>x86</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>