force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ProcessorFamily__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProcessorFamily__c</fullName>
    <label>Processor Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>68000</fullName>
            </value>
            <value>
                <fullName>68010</fullName>
            </value>
            <value>
                <fullName>68020</fullName>
            </value>
            <value>
                <fullName>68030</fullName>
            </value>
            <value>
                <fullName>68040</fullName>
            </value>
            <value>
                <fullName>68xxx Family</fullName>
            </value>
            <value>
                <fullName>6x86</fullName>
            </value>
            <value>
                <fullName>80286</fullName>
            </value>
            <value>
                <fullName>80287</fullName>
            </value>
            <value>
                <fullName>80386</fullName>
            </value>
            <value>
                <fullName>80387</fullName>
            </value>
            <value>
                <fullName>80486</fullName>
            </value>
            <value>
                <fullName>80487</fullName>
            </value>
            <value>
                <fullName>8086</fullName>
            </value>
            <value>
                <fullName>8087</fullName>
            </value>
            <value>
                <fullName>Alpha 21064</fullName>
            </value>
            <value>
                <fullName>Alpha 21066</fullName>
            </value>
            <value>
                <fullName>Alpha 21164</fullName>
            </value>
            <value>
                <fullName>Alpha 21164a</fullName>
            </value>
            <value>
                <fullName>Alpha 21164PC</fullName>
            </value>
            <value>
                <fullName>Alpha 21264</fullName>
            </value>
            <value>
                <fullName>Alpha 21364</fullName>
            </value>
            <value>
                <fullName>Alpha Family</fullName>
            </value>
            <value>
                <fullName>AMD(R) Duron(TM) Processor</fullName>
            </value>
            <value>
                <fullName>AMD29000 Family</fullName>
            </value>
            <value>
                <fullName>AMD Athlon(TM) 64 Processor Family</fullName>
            </value>
            <value>
                <fullName>AMD Athlon(TM) Processor Family</fullName>
            </value>
            <value>
                <fullName>AMD Opteron(TM) Processor Family</fullName>
            </value>
            <value>
                <fullName>AMD Phenom(TM) Processor Family</fullName>
            </value>
            <value>
                <fullName>AMD Sempron(TM) Processor Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>