force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ProcessorStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProcessorStatus__c</fullName>
    <label>Processor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CPU Disabled By BIOS (POST Error)</fullName>
            </value>
            <value>
                <fullName>CPU Disabled by user via BIOS Setup</fullName>
            </value>
            <value>
                <fullName>CPU Enabled</fullName>
            </value>
            <value>
                <fullName>CPU is Idle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>