force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__PROD_ProductType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PROD_ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Standard Product</fullName>
            </value>
            <value>
                <fullName>Composite Product</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>