force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ProductType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Work Station</fullName>
            </value>
            <value>
                <fullName>Domain Controller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>